feat: add impact simulator
